For details check git history.

devel branch:
	- Use install instead of cp to make sure the static binaries are
	  executable, fixes potential kernel panic on /init start failure.
	- Replace chroot with bwrap (bubblewrap) - full support for building as
	  unprivileged user! But also requires 'bwrap' to be part of $PATH on the
	  host build system.
	- Removal or mknod calls, might require manual mknod in sourceroot/dev in
	  case of embeddeding initramfs into kernel image.
	- Version bumps since last release:
		sysroot Alpine Linux 3.11.5 -> 3.17.2
		busybox 1.31.1 -> 1.36.0
		lvm2 2.02.186 -> 2.02.188
		dropbear 2019.78 -> 2022.83
		libuuid (util-linux ) 2.35.1 -> 2.37
		libblkid (util-linux ) 2.35.1 -> 2.37
		popt 1.16 -> 1.18
		libgpg-error 1.37 -> 1.42
		libgcrypt 1.8.5 -> 1.8.8
		json-c 0.13.1 -> 0.15

v0.10.0:
	- Provide /run/cryptsetup within initramfs. Fixes cryptsetup with luks2 header.
	- rootflags= support added (unqueued)
	- Typo fix in 00_profile.sh (André Erdmann)
	- The cryptsetup path is no longer hardcoded (André Erdmann)
	- Number of changes around `eval` usage to not crash if ever findfs return
	  white character, eval no longer running in subshells. (André Erdmann)
	- Fixes around parsing cmdline options, no longer export variables with
	  dot in its name (André Erdmann)
	- cttyhack support (André Erdmann)
	- Support for binit_net_addr=dhcp. Requested by Mathieu Garstecki in
	  issue #46
	- use rootdelay before trying to activate dmcrypt/lvm/etc.
	- simplify process_commandline_options() by dropping get_opt() all
	  together
	- uswsusp support removed.
	  I had mixed luck with this one, and found that the in-kernel swsusp just
	  works, and after resume system is snappier. I don't think anyone used
	  uswsusp, if there's any user, ping me, so I can make suspend-1.0 to be
	  buildable with musl toolchain and restore the feature.
	- All the dependencies are re-hosted under bitbucket account.